[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/Fonts/textfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://AAI Case/screens/bottom_screen_stuff/components/evidence_components/EvidenceMenu.gd" type="Script" id=2]
[ext_resource path="res://AAI Case/evidence/images/letter.png" type="Texture" id=3]

[node name="EvidenceMenuHub" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -192.0
margin_right = 256.0
rect_min_size = Vector2( 256, 192 )
script = ExtResource( 2 )

[node name="BackgroundPanel" type="Panel" parent="."]
modulate = Color( 0.647059, 0.647059, 0.647059, 1 )
margin_right = 256.0
margin_bottom = 192.0
rect_min_size = Vector2( 256, 192 )
__meta__ = {
"_edit_lock_": true
}

[node name="EvidenceNamePanel" type="Panel" parent="."]
margin_top = 33.0
margin_right = 256.0
margin_bottom = 50.0
rect_min_size = Vector2( 256, 0 )

[node name="EvidenceNameLabel" type="RichTextLabel" parent="EvidenceNamePanel"]
margin_right = 256.0
margin_bottom = 16.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
scroll_active = false

[node name="MenuHub" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 256, 192 )
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="UpperRow" type="HBoxContainer" parent="MenuHub"]
margin_top = 54.0
margin_right = 256.0
margin_bottom = 94.0
alignment = 1

[node name="Evidence1" type="TextureButton" parent="MenuHub/UpperRow"]
margin_left = 42.0
margin_right = 82.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/UpperRow/Evidence1"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Evidence2" type="TextureButton" parent="MenuHub/UpperRow"]
margin_left = 86.0
margin_right = 126.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/UpperRow/Evidence2"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Evidence3" type="TextureButton" parent="MenuHub/UpperRow"]
margin_left = 130.0
margin_right = 170.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/UpperRow/Evidence3"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Evidence4" type="TextureButton" parent="MenuHub/UpperRow"]
margin_left = 174.0
margin_right = 214.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/UpperRow/Evidence4"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="LowerRow" type="HBoxContainer" parent="MenuHub"]
margin_top = 98.0
margin_right = 256.0
margin_bottom = 138.0
alignment = 1

[node name="Evidence5" type="TextureButton" parent="MenuHub/LowerRow"]
margin_left = 42.0
margin_right = 82.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/LowerRow/Evidence5"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Evidence6" type="TextureButton" parent="MenuHub/LowerRow"]
margin_left = 86.0
margin_right = 126.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/LowerRow/Evidence6"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Evidence7" type="TextureButton" parent="MenuHub/LowerRow"]
margin_left = 130.0
margin_right = 170.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/LowerRow/Evidence7"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Evidence8" type="TextureButton" parent="MenuHub/LowerRow"]
margin_left = 174.0
margin_right = 214.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true

[node name="Panel" type="Panel" parent="MenuHub/LowerRow/Evidence8"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="LeftButton" type="Button" parent="."]
margin_left = 4.0
margin_top = 58.0
margin_right = 19.0
margin_bottom = 138.0
text = "<"

[node name="RightButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 58.0
margin_right = 252.0
margin_bottom = 138.0
text = ">"

[connection signal="mouse_entered" from="MenuHub/UpperRow/Evidence1" to="." method="_on_Evidence1_mouse_entered"]
[connection signal="pressed" from="MenuHub/UpperRow/Evidence1" to="." method="_on_Evidence1_pressed"]
[connection signal="mouse_entered" from="MenuHub/UpperRow/Evidence2" to="." method="_on_Evidence2_mouse_entered"]
[connection signal="pressed" from="MenuHub/UpperRow/Evidence2" to="." method="_on_Evidence2_pressed"]
[connection signal="mouse_entered" from="MenuHub/UpperRow/Evidence3" to="." method="_on_Evidence3_mouse_entered"]
[connection signal="pressed" from="MenuHub/UpperRow/Evidence3" to="." method="_on_Evidence3_pressed"]
[connection signal="mouse_entered" from="MenuHub/UpperRow/Evidence4" to="." method="_on_Evidence4_mouse_entered"]
[connection signal="pressed" from="MenuHub/UpperRow/Evidence4" to="." method="_on_Evidence4_pressed"]
[connection signal="mouse_entered" from="MenuHub/LowerRow/Evidence5" to="." method="_on_Evidence5_mouse_entered"]
[connection signal="pressed" from="MenuHub/LowerRow/Evidence5" to="." method="_on_Evidence5_pressed"]
[connection signal="mouse_entered" from="MenuHub/LowerRow/Evidence6" to="." method="_on_Evidence6_mouse_entered"]
[connection signal="pressed" from="MenuHub/LowerRow/Evidence6" to="." method="_on_Evidence6_pressed"]
[connection signal="mouse_entered" from="MenuHub/LowerRow/Evidence7" to="." method="_on_Evidence7_mouse_entered"]
[connection signal="pressed" from="MenuHub/LowerRow/Evidence7" to="." method="_on_Evidence7_pressed"]
[connection signal="mouse_entered" from="MenuHub/LowerRow/Evidence8" to="." method="_on_Evidence8_mouse_entered"]
[connection signal="pressed" from="MenuHub/LowerRow/Evidence8" to="." method="_on_Evidence8_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
